--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
+    "@types/validator": "^13.1.3",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
