--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/swagger": "^4.8.0",
     "@types/validator": "^13.1.3",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -41,7 +42,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "sequelize": "^6.6.2",
-    "sequelize-typescript": "^2.1.0"
+    "sequelize-typescript": "^2.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
